--- a/helmfile.d/monitoring.yaml
+++ b/helmfile.d/monitoring.yaml
@@ -121,10 +121,10 @@ releases:
                 labels:
                   job: systemd-journal
               relabel_configs:
-                - source_labels: ['__journal__systemd_unit']
-                  target_label: 'unit'
-                - source_labels: ['__journal__hostname']
-                  target_label: 'hostname'
+                - source_labels: ["__journal__systemd_unit"]
+                  target_label: "unit"
+                - source_labels: ["__journal__hostname"]
+                  target_label: "hostname"
           extraVolumes:
             - name: journal
               hostPath:
