--- a/charts/system-upgrade/plans/regular/system-plan.yaml
+++ b/charts/system-upgrade/plans/regular/system-plan.yaml
@@ -9,20 +9,43 @@ stringData:
   upgrade.sh: |
     #!/bin/sh
     dpkg --configure -a
-    apt-get update && apt-get --with-new-pkgs upgrade -y
+    apt-get update && apt-get --with-new-pkgs dist-upgrade -y
     apt-get autoremove -y
     apt-get autoclean
     if [ -f /var/run/reboot-required ]; then
-      reboot
+      echo 'reboot' | at midnight + 5hours
     fi
 ---
 apiVersion: upgrade.cattle.io/v1
 kind: Plan
 metadata:
-  name: system-upgrade-plan
+  name: system-upgrade-server-plan
   namespace: system-upgrade
 spec:
   concurrency: 1
+  nodeSelector:
+    matchExpressions:
+      - { key: node-role.kubernetes.io/control-plane, operator: Exists }
+  serviceAccountName: system-upgrade
+  secrets:
+    - name: system-upgrade-secret
+      path: /host/run/system-upgrade/secrets
+  version: focal
+  upgrade:
+    image: ubuntu:focal
+    command: ["chroot", "/host"]
+    args: ["sh", "/run/system-upgrade/secrets/upgrade.sh"]
+---
+apiVersion: upgrade.cattle.io/v1
+kind: Plan
+metadata:
+  name: system-upgrade-agent-plan
+  namespace: system-upgrade
+spec:
+  concurrency: 1
+  nodeSelector:
+    matchExpressions:
+      - { key: node-role.kubernetes.io/control-plane, operator: DoesNotExist }
   serviceAccountName: system-upgrade
   secrets:
     - name: system-upgrade-secret
